🐛 FIx: invisible btn

--- a/css/visible&invisivle.css
+++ b/css/visible&invisivle.css
@@ -4,4 +4,5 @@
 
 .invisible {
   opacity: 0;
+  display: none;
 }
